--- a/app/src/main/res/layout/activity_canvas_demo.xml
+++ b/app/src/main/res/layout/activity_canvas_demo.xml
@@ -5,13 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.shangbb.studysample.activity.CanvasDemoActivity">
+    android:orientation="vertical"
+    tools:context="com.shangbb.studysample.sample.customview.CanvasDemoActivity">
 
     <include layout="@layout/toolbar"/>
 
-    <com.shangbb.studysample.view.PicView
+    <com.shangbb.studysample.sample.customview.view.PicView
         android:id="@+id/picview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
