--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="cyan">#007FFF</color>
     <color name="blue">#0000FF</color>
     <color name="purple">#7F00FF</color>
+
+    <color name="white">#ffffffff</color>
+    <color name="lightblack">#ff202020</color>
 </resources>
