添加自定义控件

--- a/app/src/main/res/layout/activity_checkview.xml
+++ b/app/src/main/res/layout/activity_checkview.xml
@@ -8,7 +8,7 @@
 
     <include layout="@layout/toolbar"/>
 
-    <com.shangbb.studysample.sample.customview.view.CheckView
+    <com.shangbb.studysample.sample.customview.checkview.CheckView
         android:id="@+id/checkview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
