--- a/app/src/main/res/layout/activity_keyboard.xml
+++ b/app/src/main/res/layout/activity_keyboard.xml
@@ -71,6 +71,7 @@
             android:background="@color/lightblack"
             android:focusable="true"
             android:focusableInTouchMode="true"
+            android:keyPreviewLayout="@layout/keyboard_preview"
             android:keyBackground="@drawable/btn_keyboard_chinese"
             android:keyTextColor="@color/white"
             android:visibility="gone" />
