--- a/app/src/main/res/layout/activity_leafloading_view.xml
+++ b/app/src/main/res/layout/activity_leafloading_view.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp" >
 
-        <com.shangbb.studysample.sample.customview.view.LeafLoadingView
+        <com.shangbb.studysample.sample.customview.leafloading.LeafLoadingView
             android:id="@+id/leaf_loading"
             android:layout_width="302dp"
             android:layout_height="61dp"
