自定义录音、播放动画，带波浪效果

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,10 @@
 
     <color name="white">#ffffffff</color>
     <color name="lightblack">#ff202020</color>
+
+    <!--RecordView 相关color-->
+    <color name="round_color">#DAF6FE</color>
+    <color name="time_text_color">#FF84AD</color>
+    <color name="round_fill_color">#45C3E5</color>
+    <color name="round_hint_text_color">#666666</color>
 </resources>
