--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="orange">#FF7F00</color>
     <color name="yellow">#FFFF00</color>
     <color name="green">#00FF00</color>
+    <color name="grey">#666666</color>
     <color name="cyan">#007FFF</color>
     <color name="blue">#0000FF</color>
     <color name="purple">#7F00FF</color>
