--- a/app/src/main/res/layout/activity_baseview.xml
+++ b/app/src/main/res/layout/activity_baseview.xml
@@ -14,7 +14,8 @@
         app:tabIndicatorColor="@color/colorAccent"
         app:tabIndicatorHeight="0dp"
         app:tabSelectedTextColor="@color/colorPrimary"
-        app:tabTextColor="@color/grey">
+        app:tabTextColor="@color/grey"
+        app:tabTextAppearance="@style/MyTabLayoutTextAppearance">
     </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
