--- a/app/src/main/res/layout/activity_baseview.xml
+++ b/app/src/main/res/layout/activity_baseview.xml
@@ -6,6 +6,7 @@
               android:layout_height="match_parent">
 
 
+    <include layout="@layout/toolbar"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/bezier_tab"
